deploy/yc-sirius/edu-viktor-tihovskoy/manifests/django-clearsessions.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-clearsessions
spec:
  restartPolicy: Never
  containers:
    - name: django-clearsessions
      image: django_app
      imagePullPolicy: IfNotPresent
      command: ["python"]
      args: ["manage.py", "clearsessions"]
