deploy/yc-sirius/edu-viktor-tihovskoy/manifests/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: edu-viktor-tihovskoy 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: tikhovskoi/k8s-test-django:c37b6f0
          ports:
            - containerPort: 80
