deploy/yc-sirius/edu-viktor-tihovskoy/manifests/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
  namespace: edu-viktor-tihovskoy
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
