deploy/yc-sirius/edu-viktor-tihovskoy/manifests/test-psql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-test
  namespace: edu-viktor-tihovskoy
spec:
  containers:
    - name: ubuntu
      image: ubuntu:22.04
      command: ["sleep", "infinity"]
      tty: true
