deploy/yc-sirius/edu-viktor-tihovskoy/manifests/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: edu-viktor-tihovskoy
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    - port: 80
      targetPort: 80
