deploy/yc-sirius/edu-viktor-tihovskoy/manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: edu-viktor-tihovskoy
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
