deploy/yc-sirius/edu-viktor-tihovskoy/manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: edu-viktor-tihovskoy
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: fpqn:3naod1-brub1aucbb
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: alb
  rules:
    - host: edu-viktor-tihovskoy.sirius-k8s.dvmn.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django
                port:
                  number: 80
